Fix layout issues

--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,7 @@ body {
     color: #fff;
 }
 html {
-    margin: 0; height: 100%; overflow: hidden;
+    margin: 0; height: 100%; overflow: auto;
 }
 
 a {
@@ -95,8 +95,7 @@ hr {
 }
 .center {
     position: relative;
-    top: 40%;
-    transform: translateY(-50%);
+	top: 5%
 }
 .link {
     text-decoration: underline;
@@ -107,13 +106,14 @@ hr {
 .navBar {
     width: 100%;
     height: 40px;
-    position: fixed;
+
     bottom: -25%;
     left: 0;
     text-align: center;
     z-index: 1;
 }
 .navItem {
+	text-align: center;
     padding: 0 8%;
 }
 
@@ -438,13 +438,14 @@ hr {
         font-size: 15px;
     }
     .avatar {
-        width: 140px;
-        height: 140px;
+        width: 360px;
+        height: 360px;
     }
 
     .navBar {
+		text-align: center;
         height: 30px;
-				bottom: -35%;
+		bottom: -67%;
     }
     h4 {
         font-size: 35px;
@@ -575,7 +576,7 @@ hr {
         font-size: 26px;
     }
     .avatar {
-        width: 250px; height: 250px;
+        width: 360px; height: 360px;
     }
     .sectionStart {
         height: 10%;
